<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sokolovska.sushchak.projektphonebook.activities.AddNewContactActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_add_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/person" />

        <EditText
            android:id="@+id/et_add_name"
            android:layout_width="170dp"
            android:iconifiedByDefault="true"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_add_photo"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/iv_add_photo"
            android:ems="10"
            android:hint="@string/add_name_and_surname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_add_second_name"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_add_name"
            android:layout_below="@+id/et_add_name"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/add_secondName"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_add_middle_name"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_add_second_name"
            android:layout_below="@+id/et_add_second_name"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/add_middleName"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/iBtn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/et_add_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/et_add_name"
            android:onClick="clickDown"
            android:background="@drawable/ic_arrow_down" />



    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_phone"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/tv_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/add_mobile" />

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="@dimen/width_editText"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="phone" />

                    <ImageButton
                        android:id="@+id/ib_mobile_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:visibility="invisible"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_clear" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:id="@+id/icon_work_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/tv_work_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/add_workMobile" />

                    <EditText
                        android:id="@+id/et_work_mobile"
                        android:layout_width="@dimen/width_editText"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />

                    <ImageButton
                        android:id="@+id/ib_work_mobile_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_clear" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:id="@+id/icon_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_email"
                         />

                    <TextView
                        android:id="@+id/tv_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/add_mail" />

                    <EditText
                        android:id="@+id/et_mail"
                        android:layout_width="@dimen/width_editText"
                        android:layout_height="wrap_content"

                        android:inputType="textWebEmailAddress" />

                    <ImageButton
                        android:id="@+id/ib_mail_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_clear" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:id="@+id/icon_work_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/tv_work_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/add_workMail" />

                    <EditText
                        android:id="@+id/et_work_mail"
                        android:layout_width="@dimen/width_editText"
                        android:layout_height="wrap_content"

                        android:inputType="textEmailAddress" />

                    <ImageButton
                        android:id="@+id/ib_work_mail_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_clear"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <ImageView
                        android:id="@+id/icon_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_home" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/add_address" />

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="@dimen/width_editText"
                        android:layout_height="wrap_content"

                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/ib_address_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_clear"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:id="@+id/icon_work_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_business" />

                    <TextView
                        android:id="@+id/tv_work_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/add_workAddress" />

                    <EditText
                        android:id="@+id/et_work_address"
                        android:layout_width="@dimen/width_editText"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/ib_work_address_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_clear"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <ImageView
                        android:id="@+id/icon_happy_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_cake" />

                    <TextView
                        android:id="@+id/tv_happy_bithday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/add_happyBirthday" />

                    <EditText
                        android:id="@+id/et_happy_birthday"
                        android:layout_width="@dimen/width_editText"
                        android:layout_height="wrap_content"
                        tools:ignore="LabelFor"
                        android:onClick="clickAddDate"
                        />

                    <ImageButton
                        android:id="@+id/ib_happy_birthday_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_clear"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <ImageView
                        android:id="@+id/icon_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_note"/>

                    <TextView
                        android:id="@+id/tv_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/add_note" />

                    <EditText
                        android:id="@+id/et_note"
                        android:layout_width="@dimen/width_editText"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />

                    <ImageButton
                        android:id="@+id/ib_note_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_clear" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/add_group" />

                <Spinner
                    android:id="@+id/sp_add_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="50dp" />

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_add_cancel"
                android:onClick="onClick"
                android:scrollbarAlwaysDrawVerticalTrack="true"/>

            <Button
                android:id="@+id/btn_add_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_add_save"
                android:onClick="save"
                android:scrollbarAlwaysDrawVerticalTrack="true"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>